--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,57 +9,21 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test1</a></td><td class="num">5</td><td class="num">0</td><td class="num attn">7</td><td class="num">471,536</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test1</a></td><td class="num">12</td><td class="num">0</td><td class="num">0</td><td class="num">156,579</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="7">com.qa.tests.ImagingWorkListIPPageTest</td><td><a href="#m0">doImagingWorklistIPFlowPATest</a></td><td rowspan="1">1612173739199</td><td rowspan="1">1</td></tr><tr class="failedeven"><td><a href="#m1">doImagingWorklistIPFlowResultEntryTest</a></td><td rowspan="1">1612173739203</td><td rowspan="1">0</td></tr><tr class="failedeven"><td><a href="#m2">doImagingWorklistIPFlowTest</a></td><td rowspan="1">1612173739197</td><td rowspan="1">1</td></tr><tr class="failedeven"><td><a href="#m3">doImagingWorklistIPFlowTestPerfTest</a></td><td rowspan="1">1612173739202</td><td rowspan="1">0</td></tr><tr class="failedeven"><td><a href="#m4">doImagingWorklistOPFlowDispatchTest</a></td><td rowspan="1">1612173739205</td><td rowspan="1">0</td></tr><tr class="failedeven"><td><a href="#m5">doImagingWorklistOPFlowResultverifyTest</a></td><td rowspan="1">1612173739204</td><td rowspan="1">0</td></tr><tr class="failedeven"><td><a href="#m6">doNavigateToImagingWorklistLinkTest</a></td><td rowspan="1">1612173676437</td><td rowspan="1">62758</td></tr><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.qa.tests.ImagingWorkListIPPageTest</td><td><a href="#m7">doCasesheetprecripstionTest</a></td><td rowspan="1">1612173631151</td><td rowspan="1">45284</td></tr><tr class="passedeven"><td><a href="#m8">doLoginTest</a></td><td rowspan="1">1612173271934</td><td rowspan="1">758</td></tr><tr class="passedeven"><td><a href="#m9">doNavigateToDoctorWorklistTest</a></td><td rowspan="1">1612173629784</td><td rowspan="1">1366</td></tr><tr class="passedeven"><td><a href="#m10">doNavigateToHISHomeTest</a></td><td rowspan="1">1612173628883</td><td rowspan="1">899</td></tr><tr class="passedeven"><td><a href="#m11">doNavigateToSelectHospitalLocationTest</a></td><td rowspan="1">1612173272694</td><td rowspan="1">356188</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="12">com.qa.tests.ImagingWorkListIPPageTest</td><td><a href="#m0">doCasesheetprecripstionTest</a></td><td rowspan="1">1612521003718</td><td rowspan="1">51963</td></tr><tr class="passedeven"><td><a href="#m1">doImagingWorklistIPFlowPATest</a></td><td rowspan="1">1612521064078</td><td rowspan="1">1786</td></tr><tr class="passedeven"><td><a href="#m2">doImagingWorklistIPFlowResultEntryTest</a></td><td rowspan="1">1612521068444</td><td rowspan="1">6862</td></tr><tr class="passedeven"><td><a href="#m3">doImagingWorklistIPFlowTest</a></td><td rowspan="1">1612521057140</td><td rowspan="1">6935</td></tr><tr class="passedeven"><td><a href="#m4">doImagingWorklistIPFlowTestPerfTest</a></td><td rowspan="1">1612521065869</td><td rowspan="1">2572</td></tr><tr class="passedeven"><td><a href="#m5">doImagingWorklistOPFlowDispatchTest</a></td><td rowspan="1">1612521095696</td><td rowspan="1">5549</td></tr><tr class="passedeven"><td><a href="#m6">doImagingWorklistOPFlowResultverifyTest</a></td><td rowspan="1">1612521075308</td><td rowspan="1">20386</td></tr><tr class="passedeven"><td><a href="#m7">doLoginTest</a></td><td rowspan="1">1612520949972</td><td rowspan="1">23372</td></tr><tr class="passedeven"><td><a href="#m8">doNavigateToHISHomeTest</a></td><td rowspan="1">1612520998530</td><td rowspan="1">2079</td></tr><tr class="passedeven"><td><a href="#m9">doNavigateToImagingWorklistLinkTest</a></td><td rowspan="1">1612521055684</td><td rowspan="1">1453</td></tr><tr class="passedeven"><td><a href="#m10">doNavigateToInpatientEmergencyLinkTest</a></td><td rowspan="1">1612521000613</td><td rowspan="1">3101</td></tr><tr class="passedeven"><td><a href="#m11">doNavigateToSelectHospitalLocationTest</a></td><td rowspan="1">1612520973352</td><td rowspan="1">25174</td></tr></tbody>
 </table>
-<h2>Test1</h2><h3 id="m0">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowPATest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.tests.ImagingWorkListIPPageTest.doImagingWorklistIPFlowPATest(ImagingWorkListIPPageTest.java:80)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowResultEntryTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.tests.ImagingWorkListIPPageTest.doImagingWorklistIPFlowResultEntryTest(ImagingWorkListIPPageTest.java:94)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.tests.ImagingWorkListIPPageTest.doImagingWorklistIPFlowTest(ImagingWorkListIPPageTest.java:73)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowTestPerfTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.tests.ImagingWorkListIPPageTest.doImagingWorklistIPFlowTestPerfTest(ImagingWorkListIPPageTest.java:87)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistOPFlowDispatchTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.tests.ImagingWorkListIPPageTest.doImagingWorklistOPFlowDispatchTest(ImagingWorkListIPPageTest.java:108)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistOPFlowResultverifyTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.tests.ImagingWorkListIPPageTest.doImagingWorklistOPFlowResultverifyTest(ImagingWorkListIPPageTest.java:101)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToImagingWorklistLinkTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.qa.pages.HISHomePage.doNavigateToImagingWorklistIPLink(HISHomePage.java:238)
-	at com.qa.tests.ImagingWorkListIPPageTest.doNavigateToImagingWorklistLinkTest(ImagingWorkListIPPageTest.java:67)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.qa.tests.ImagingWorkListIPPageTest#doCasesheetprecripstionTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.qa.tests.ImagingWorkListIPPageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToDoctorWorklistTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToHISHomeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test1</h2><h3 id="m0">com.qa.tests.ImagingWorkListIPPageTest#doCasesheetprecripstionTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowPATest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowResultEntryTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistIPFlowTestPerfTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistOPFlowDispatchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.qa.tests.ImagingWorkListIPPageTest#doImagingWorklistOPFlowResultverifyTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.qa.tests.ImagingWorkListIPPageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToHISHomeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToImagingWorklistLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToInpatientEmergencyLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m11">com.qa.tests.ImagingWorkListIPPageTest#doNavigateToSelectHospitalLocationTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
