--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee998b">  <td>21/02/01 15:24:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">&gt;&gt;setuptest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test1-1@998070337</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:24:31</td>   <td>4252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doLoginTest()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doLoginTest</td> 
-  <td>TestNG-test=Test1-1@998070337</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:24:32</td>   <td>5012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToSelectHospitalLocationTest</td> 
-  <td>TestNG-test=Test1-2@1530682626</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:30:28</td>   <td>361201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToHISHomeTest</td> 
-  <td>TestNG-test=Test1-3@626474143</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:30:29</td>   <td>362102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToDoctorWorklistTest()[pri:5, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToDoctorWorklistTest</td> 
-  <td>TestNG-test=Test1-4@1809072344</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:30:31</td>   <td>363469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doCasesheetprecripstionTest()[pri:6, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doCasesheetprecripstionTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:31:16</td>   <td>408755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToImagingWorklistLinkTest()[pri:7, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToImagingWorklistLinkTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>471515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowTest()[pri:8, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>471517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowPATest()[pri:9, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowPATest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>471520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowTestPerfTest()[pri:10, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowTestPerfTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>471521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowResultEntryTest()[pri:11, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowResultEntryTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>471522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistOPFlowResultverifyTest()[pri:12, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistOPFlowResultverifyTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>471523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistOPFlowDispatchTest()[pri:13, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistOPFlowDispatchTest</td> 
-  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>21/02/01 15:32:19</td>   <td>471524</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="ee998b">  <td>21/02/05 15:59:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">&gt;&gt;setuptest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 15:59:09</td>   <td>5295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doLoginTest()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doLoginTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 15:59:33</td>   <td>28675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToSelectHospitalLocationTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 15:59:58</td>   <td>53853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToHISHomeTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:00:00</td>   <td>55936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToInpatientEmergencyLinkTest()[pri:5, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToInpatientEmergencyLinkTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:00:03</td>   <td>59041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doCasesheetprecripstionTest()[pri:6, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doCasesheetprecripstionTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:00:55</td>   <td>111007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToImagingWorklistLinkTest()[pri:7, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToImagingWorklistLinkTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:00:57</td>   <td>112463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowTest()[pri:8, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:01:04</td>   <td>119401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowPATest()[pri:9, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowPATest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:01:05</td>   <td>121192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowTestPerfTest()[pri:10, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowTestPerfTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:01:08</td>   <td>123767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowResultEntryTest()[pri:11, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowResultEntryTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:01:15</td>   <td>130631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistOPFlowResultverifyTest()[pri:12, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistOPFlowResultverifyTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/05 16:01:35</td>   <td>151019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistOPFlowDispatchTest()[pri:13, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistOPFlowDispatchTest</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="ee998b">  <td>21/02/05 16:01:41</td>   <td>156569</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1625082366</td>   <td></td> </tr>
 </table>
